<resources>
    <string name="app_name">Quizzy</string>
    <string name="sign_up">Sign Up</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_up2">Sign Up</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="don_t_have_an_account_sign_up">Don’t have an account? Sign Up</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="emaillogin">Email</string>
    <string name="loginlogin">Login</string>
    <string name="home">Home</string>
    <string name="hello_john_doe">Hello, John Doe!</string>
    <string name="let_s_start">Let\'s start!</string>
    <string name="your_exams">Your Exams</string>
</resources>